--- a/index.html
+++ b/index.html
@@ -3,14 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="agrinho.css">
     <title>Agrinho</title>
 </head>
 
 <body>
-    <h2 class="titulo1">Do campo a cidade</h2>
-    <h1 class="titulo2">Colhendo oportunidades</h1>
-    <div class="cu"></div>
+    <img class="mato1" src="https://i.ibb.co/Fx4sfdH/Design-sem-nome.png">
+    <img class="mato2" src="https://i.ibb.co/Fx4sfdH/Design-sem-nome.png">
+    <img class="matooutrolado1" src="https://i.ibb.co/Fx4sfdH/Design-sem-nome.png">
+    <img class="mato3" src="https://i.ibb.co/Fx4sfdH/Design-sem-nome.png">
+    <img class="mato4" src="https://i.ibb.co/Fx4sfdH/Design-sem-nome.png">
+
+    <div class="titulo">
+        <h1 class="titulo1">Do campo a cidade</h1>
+        <h2 class="titulo2">Colhendo oportunidades</h2>
+    </div>
+    <div class="cubo"></div>
 </body>
 
 
@@ -27,3 +36,4 @@
     });
 </script>
 </html>
+
