--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 
 <body>
-    <img class="mato1" src="https://i.ibb.co/Fx4sfdH/Design-sem-nome.png">
-    <img class="mato2" src="https://i.ibb.co/Fx4sfdH/Design-sem-nome.png">
-    <img class="matooutrolado1" src="https://i.ibb.co/Fx4sfdH/Design-sem-nome.png">
-    <img class="mato3" src="https://i.ibb.co/Fx4sfdH/Design-sem-nome.png">
-    <img class="mato4" src="https://i.ibb.co/Fx4sfdH/Design-sem-nome.png">
+    <img class="mato1" src="mato.png">
+    <img class="mato2" src="mato.png">
+    <img class="arvore" src="arvore.png">
+    <img class="arbusto1" src="arbruto.png">
+    <img class="arbusto2" src="arbruto.png">
 
     <div class="titulo">
         <h1 class="titulo1">Do campo a cidade</h1>
@@ -36,4 +36,3 @@
     });
 </script>
 </html>
-
