--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 
 <body>
-    <img class="mato1" src="mato.png">
-    <img class="mato2" src="mato.png">
-    <img class="arvore" src="arvore.png">
-    <img class="arbusto1" src="arbruto.png">
-    <img class="arbusto2" src="arbruto.png">
+    <img class="mato1" src="imagens/mato.png">
+    <img class="mato2" src="imagens/mato.png">
+    <img class="arvore" src="imagens/arvore.png">
+    <img class="arbusto1" src="imagens/arbruto.png">
+    <img class="arbusto2" src="imagens/arbruto.png">
 
     <div class="titulo">
         <h1 class="titulo1">Do campo a cidade</h1>
