--- a/index.html
+++ b/index.html
@@ -4,20 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="agrinho1.png">
     <link rel="stylesheet" href="agrinho.css">
     <title>Agrinho</title>
 </head>
 
 <body>
-    <img class="mato1" src="imagens/mato.png">
-    <img class="mato2" src="imagens/mato.png">
-    <img class="arvore" src="imagens/arvore.png">
-    <img class="arbusto1" src="imagens/arbruto.png">
-    <img class="arbusto2" src="imagens/arbruto.png">
 
     <div class="titulo">
         <h1 class="titulo1">Do campo a cidade</h1>
         <h2 class="titulo2">Colhendo oportunidades</h2>
+    </div>
+
+    <div class="camada1">
+        <img class="matagal" src="matagal.png">
+        <img class="arvore1" src="arvore.png">
+        <img class="arvore2" src="arvore1.png"
     </div>
     <div class="cubo"></div>
 </body>
