--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     </div>
 
     <div class="camada1">
-        <img class="matagal" src="matagal.png">
-        <img class="arvore1" src="arvore.png">
-        <img class="arvore2" src="arvore1.png"
+        <img class="matagal" src="Imagens/matagal.png">
+        <img class="arvore1" src="Imagens/arvore.png">
+        <img class="arvore2" src="Imagens/arvore1.png"
     </div>
     <div class="cubo"></div>
 </body>
