--- a/index.html
+++ b/index.html
@@ -10,18 +10,24 @@
 </head>
 
 <body>
-
     <div class="titulo">
         <h1 class="titulo1">Do campo a cidade</h1>
         <h2 class="titulo2">Colhendo oportunidades</h2>
+        <center><img class="scroll" src="scroll.gif"></center>
     </div>
 
     <div class="camada1">
-        <img class="matagal" src="Imagens/matagal.png">
-        <img class="arvore1" src="Imagens/arvore.png">
-        <img class="arvore2" src="Imagens/arvore1.png"
+        <img class="matagal" src="matagal.png">
+        <img class="nuvem1" src="nuvem.png">
+        <img class="subnuvem1" src="nuvem.png">
+        <img class="subnuvem2" src="nuvem.png">
+        <img class="nuvem2" src="nuvem.png">
+        <img class="arvore1" src="arvore.png">
+        <img class="arvore2" src="arvore1.png">
+        <img class="estrada1" src="estradaterra.png">
+        <img class="montanha1" src="montanha.png">
+        <img class="montanha2" src="montanha2.png">
     </div>
-    <div class="cubo"></div>
 </body>
 
 
