--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
     </div>
 
     <div class="camada1">
-        <img class="matagal" src="matagal.png">
-        <img class="nuvem1" src="nuvem.png">
-        <img class="subnuvem1" src="nuvem.png">
-        <img class="subnuvem2" src="nuvem.png">
-        <img class="nuvem2" src="nuvem.png">
-        <img class="arvore1" src="arvore.png">
-        <img class="arvore2" src="arvore1.png">
-        <img class="estrada1" src="estradaterra.png">
-        <img class="montanha1" src="montanha.png">
-        <img class="montanha2" src="montanha2.png">
+        <img class="matagal" src="Imagens/matagal.png">
+        <img class="nuvem1" src="Imagens/nuvem.png">
+        <img class="subnuvem1" src="Imagens/nuvem.png">
+        <img class="subnuvem2" src="Imagens/nuvem.png">
+        <img class="nuvem2" src="Imagens/nuvem.png">
+        <img class="arvore1" src="Imagens/arvore.png">
+        <img class="arvore2" src="Imagens/arvore1.png">
+        <img class="estrada1" src="Imagens/estradaterra.png">
+        <img class="montanha1" src="Imagens/montanha.png">
+        <img class="montanha2" src="Imagens/montanha2.png">
     </div>
 </body>
 
