--- a/index.html
+++ b/index.html
@@ -4,29 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="agrinho1.png">
+    <link rel="icon" type="image/x-icon" href="logo.png">
     <link rel="stylesheet" href="agrinho.css">
     <title>Agrinho</title>
 </head>
 
 <body>
     <div class="titulo">
-        <h1 class="titulo1">Do campo a cidade</h1>
+        <h1 class="titulo1">Do campo à cidade</h1>
         <h2 class="titulo2">Colhendo oportunidades</h2>
         <center><img class="scroll" src="scroll.gif"></center>
     </div>
 
     <div class="camada1">
         <img class="matagal" src="Imagens/matagal.png">
-        <img class="nuvem1" src="Imagens/nuvem.png">
-        <img class="subnuvem1" src="Imagens/nuvem.png">
-        <img class="subnuvem2" src="Imagens/nuvem.png">
-        <img class="nuvem2" src="Imagens/nuvem.png">
+        <img class="campao" src="Imagens/campao.png">
+        <img class="nuvem" src="Imagens/nuvem.png">
         <img class="arvore1" src="Imagens/arvore.png">
         <img class="arvore2" src="Imagens/arvore1.png">
         <img class="estrada1" src="Imagens/estradaterra.png">
-        <img class="montanha1" src="Imagens/montanha.png">
-        <img class="montanha2" src="Imagens/montanha2.png">
+        <img class="fundo" src="Imagens/campao2.png">
+        <img class="campao2" src="Imagens/campao3.png">
     </div>
 </body>
 
