--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="logo.png">
+    <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="Imagens/logo.png">
     <link rel="stylesheet" href="agrinho.css">
     <title>Agrinho</title>
 </head>
@@ -13,10 +14,11 @@
     <div class="titulo">
         <h1 class="titulo1">Do campo à cidade</h1>
         <h2 class="titulo2">Colhendo oportunidades</h2>
-        <center><img class="scroll" src="scroll.gif"></center>
+        <center><img class="scroll" src="Imagens/scroll.png"></center>
     </div>
 
-    <div class="camada1">
+    <main class="tudo">
+        <img class="chapeu" src="Imagens/chapeu.png">
         <img class="matagal" src="Imagens/matagal.png">
         <img class="campao" src="Imagens/campao.png">
         <img class="nuvem" src="Imagens/nuvem.png">
@@ -24,8 +26,19 @@
         <img class="arvore2" src="Imagens/arvore1.png">
         <img class="estrada1" src="Imagens/estradaterra.png">
         <img class="fundo" src="Imagens/campao2.png">
-        <img class="campao2" src="Imagens/campao3.png">
-    </div>
+        <img class="bilhoesdenuvens" src="Imagens/nuvens.png">
+        <img class="fazendinha" src="Imagens/minifazendinha.png">
+        <img class="casinhafundo" src="Imagens/casinhafundo.png">
+        <img class="casinha" src="Imagens/casa.png">
+        <img class="hominho" src="Imagens/fazendeiro.png">
+        <img class="estrada2" src="Imagens/estradaterra2.png">
+        <img class="bilhoesdenuvens2" src="Imagens/nuvens.png">
+        <img class="bilhoesdenuvens3" src="Imagens/nuvens2.png">
+        <img class="caixa" src="Imagens/caixadeverduras.png">
+        <img class="trigo" src="Imagens/trigo.png">
+        <img class="animais" src="Imagens/animais.png">
+        <a href="cidade.html"><img class="veiculo" src="Imagens/hilux.png"></a>
+    </main>
 </body>
 
 
