--- a/index.html
+++ b/index.html
@@ -30,7 +30,13 @@
         <img class="fazendinha" src="Imagens/minifazendinha.png">
         <img class="casinhafundo" src="Imagens/casinhafundo.png">
         <img class="casinha" src="Imagens/casa.png">
-        <img class="hominho" src="Imagens/fazendeiro.png">
+
+        <div id="dialogue-container" class="dialogue-container">
+            <img id="character-image" class="character-image" src="Imagens/fazendeiro.png">
+            <div id="character-message" class="character-message" style="display: none;"></div>
+            <div id="user-options" class="user-options" style="display: none;"></div>
+        </div>
+
         <img class="estrada2" src="Imagens/estradaterra2.png">
         <img class="bilhoesdenuvens2" src="Imagens/nuvens.png">
         <img class="bilhoesdenuvens3" src="Imagens/nuvens2.png">
@@ -39,6 +45,7 @@
         <img class="animais" src="Imagens/animais.png">
         <a href="cidade.html"><img class="veiculo" src="Imagens/hilux.png"></a>
     </main>
+    <script src="script.js"></script>
 </body>
 
 
