--- a/cidade.html
+++ b/cidade.html
@@ -29,7 +29,13 @@
         <img class="carinhabrabo" src="Imagens/carapoucasideia.png">
         <img class="predio5" src="Imagens/predio5.png">
         <img class="estacionamento" src="Imagens/estacionamento.png">
-        <img class="fazendeiro" src="Imagens/fazendeiro.png">
+        
+        <div id="dialogue-container" class="dialogue-container">
+            <img id="character-image" class="character-image" src="Imagens/fazendeiro.png">
+            <div id="character-message" class="character-message" style="display: none;"></div>
+            <div id="user-options" class="user-options" style="display: none;"></div>
+        </div>
+        
         <img class="verduras" src="Imagens/caixadeverduras.png">
         <img class="vendedor" src="Imagens/vendedor.png">
         <img class="nuvens3" src="Imagens/nuvens.png">
@@ -37,6 +43,7 @@
         <img class="calcada3" src="Imagens/calcada.png">
         <img class="fundo2" src="Imagens/fundoreal.png">
     </main>
+    <script src="script2.js"></script>
 </body>
 
 
